err/nrfutil.err
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Compiling './bin/sniffer.py'...
Compiling './bin/spinel-cli.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/behave'...
Listing './lib/python3.5/site-packages/behave/compat'...
Listing './lib/python3.5/site-packages/behave/formatter'...
Listing './lib/python3.5/site-packages/behave/reporter'...
Listing './lib/python3.5/site-packages/behave-1.2.5.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nordicsemi'...
Listing './lib/python3.5/site-packages/nordicsemi/bluetooth'...
Listing './lib/python3.5/site-packages/nordicsemi/bluetooth/hci'...
Listing './lib/python3.5/site-packages/nordicsemi/bluetooth/hci/tests'...
Listing './lib/python3.5/site-packages/nordicsemi/dfu'...
Compiling './lib/python3.5/site-packages/nordicsemi/dfu/dfu_transport_serial.py'...
***   File "./lib/python3.5/site-packages/nordicsemi/dfu/dfu_transport_serial.py", line 62
    SLIP_BYTE_END             = 0300
                                   ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/nordicsemi/dfu/intelhex'...
Compiling './lib/python3.5/site-packages/nordicsemi/dfu/intelhex/__init__.py'...
***   File "./lib/python3.5/site-packages/nordicsemi/dfu/intelhex/__init__.py", line 322
    print "IntelHex.tobinarray: 'pad' parameter is deprecated."
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nordicsemi/dfu/signing.py'...
***   File "./lib/python3.5/site-packages/nordicsemi/dfu/signing.py", line 56
    print "Failed to import ecdsa, cannot do signing"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nordicsemi/dfu/tests'...
Compiling './lib/python3.5/site-packages/nordicsemi/dfu/util.py'...
***   File "./lib/python3.5/site-packages/nordicsemi/dfu/util.py", line 67
    print "%s %s" % (question, prompt)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nordicsemi/thread'...
Listing './lib/python3.5/site-packages/nordicsemi/thread/hex'...
Listing './lib/python3.5/site-packages/nordicsemi/utility'...
Listing './lib/python3.5/site-packages/nordicsemi/utility/tests'...
Listing './lib/python3.5/site-packages/nrfutil-3.4.0.egg-info'...
Listing './lib/python3.5/site-packages/parse-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/parse_type'...
Listing './lib/python3.5/site-packages/parse_type-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py'...
Compiling './lib/python3.5/site-packages/pc_ble_driver_py/ble_driver_types.py'...
***   File "./lib/python3.5/site-packages/pc_ble_driver_py/ble_driver_types.py", line 47
    print "Error. No ble_driver module found."
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pc_ble_driver_py/examples'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/hex'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/hex/sd_api_v2'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/hex/sd_api_v3'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/linux'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/linux/x86_32'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/linux/x86_64'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/macos_osx'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/win'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/win/x86_32'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py/lib/win/x86_64'...
Listing './lib/python3.5/site-packages/pc_ble_driver_py-0.11.3.egg-info'...
Listing './lib/python3.5/site-packages/piccata'...
Listing './lib/python3.5/site-packages/piccata-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/pyspinel-1.0.0a1.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spinel'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/transport'...
Compiling './lib/python3.5/site-packages/transport/tsocket.py'...
***   File "./lib/python3.5/site-packages/transport/tsocket.py", line 32
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
